--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "version": "1.0.0",
   "devDependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.2.1",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^5.2.7",
     "@wessberg/rollup-plugin-ts": "^1.2.13",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.0.0",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
@@ -13,7 +18,8 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.2.0",
     "svelte": "^3.12.1",
-    "typescript": "^3.4.5"
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
   },
   "dependencies": {
     "@types/node": "^13.9.1",
@@ -26,6 +32,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
-    "start:dev": "sirv public --dev"
+    "start:dev": "sirv public --dev",
+    "test": "rollup -c && mocha -r ts-node/register tests/**/*.test.ts",
+    "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test"
   }
 }
