--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
     "@wessberg/rollup-plugin-ts": "^1.2.13",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "npm-run-all": "^4.1.5",
@@ -32,7 +34,7 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
     "start:dev": "sirv public --dev",
-    "test": "rollup -c && mocha -r ts-node/register tests/**/*.test.ts",
+    "test": "rollup -c && env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test"
   }
 }
