--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .env
-.vscode
 node_modules
 public/bundle.*
 src/**/*.js
 src/**/*.js.map
 yarn.lock
+.nyc_output
+.firebase
