--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@wessberg/rollup-plugin-ts": "^1.2.13",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "bulma": "^0.8.1",
+    "bulma": "^0.8.2",
     "chai": "^4.2.0",
     "chart.js": "^2.9.3",
     "mocha": "^6.2.2",
@@ -20,11 +20,12 @@
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.8.1",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.2.0",
+    "sass": "^1.26.3",
     "svelte": "^3.12.1",
     "svelte-router-spa": "^5.4.4",
-    "svelte-routing": "^1.4.2",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
