updated UI and all logic done and working

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
-    "start:dev": "sirv public --dev -s",
+    "start:dev": "sirv public --dev -s -p 3000",
     "test": "rollup -c && env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register tests/**/*.test.ts",
     "coverage": "nyc -r text -e .ts -x \"tests/*.test.ts\" npm run test"
   }
