--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@blackjack
+        uses: actions/checkout@master
       - name: Setup Node
-        uses: actions/setup-node@blackjack
+        uses: actions/setup-node@master
         with:
           node-version: '10.x'
       - run: npm install
       - run: npm run test
       - run: npm run build
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@blackjack
+        uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env:
