--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,21 @@
 {
-  "hosting": {
+  "hosting": [{
+    "target": "master",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  {
+    "target": "blackjack",
     "public": "public",
     "ignore": [
       "firebase.json",
@@ -13,4 +29,5 @@
       }
     ]
   }
+]
 }
