--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svelte-ts",
   "version": "1.2.0",
   "main": "src/index.ts",
+  "license": "MIT",
   "devDependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.2.1",
     "@types/chai": "^4.2.11",
