--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.3.0",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/chai": "^4.2.12",
     "@types/chart.js": "^2.9.24",
     "@types/mocha": "^8.0.3",
@@ -25,6 +26,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.26.11",
     "svelte": "^3.28.0",
+    "svelte-check": "^1.0.52",
+    "svelte-preprocess": "^4.3.2",
     "svelte-router-spa": "^5.7.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
@@ -36,6 +39,7 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
+    "check": "svelte-check",
     "start": "sirv public",
     "start:dev": "sirv public --dev -s -p 3000",
     "test": "rollup -c && env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register tests/**/*.test.ts",
